# MiLyfe-Brain

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  FULL_AUDIT_REPORT.md  FULL_SPEC.md  LICENSE  MANIFESTO.md  Makefile  Mi.odt  README.md  docker-compose.gpu.yml  docker-compose.yml  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  security-scan.yml
backend/: Dockerfile  __init__.py  alembic.ini  cli.py  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  base.py  factory.py  message_bus.py  roles.py  taor_engine.py  tool_parser.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_and_workspaces.py  003_add_execution_replay.py  004_add_integrations_and_queues.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  agents.py  brain.py  chat.py  daemon.py  documents.py  download.py  export_import.py  filesystem.py  health.py  logs.py  notifications.py  playbooks.py  queue.py  scheduler.py  selftest.py  settings.py  settings_api.py  streaming.py  tasks.py  tokens.py  workspace.py
backend/graphs/: __init__.py  orchestrator.py  playbook_engine.py  playbook_parser.py  swarm_graph.py
backend/hooks/: __init__.py  base.py  registry.py
backend/mcp/: __init__.py  client.py  schema.py  server.py
backend/memory/: __init__.py  checkpointer.py  database.py  vector_store.py
backend/models/: __init__.py  schemas.py
backend/plugins/: __init__.py  loader.py
backend/plugins/example-weather/: __init__.py  manifest.json  plugin.py
backend/prompts/: __init__.py  output_styles.py  rule_loader.py  slash_commands.py
backend/safety/: __init__.py  approvals.py  command_classifier.py  logger.py  permissions.py  snapshots.py
backend/services/: __init__.py  agent_learning.py  analytics.py  background_worker.py  ci_importer.py  circuit_breaker.py  compliance.py  config_hierarchy.py  context_manager.py  cors_config.py  daemon.py  daily_digest.py  env_snapshot.py  file_lock.py  logging_config.py  marketplace.py  memory_persistence.py  memory_service.py  memory_sharing.py  model_fallback.py  multi_model_provider.py  multi_user.py  notification_service.py  onboarding.py  output_validator.py  permission_service.py  postgres_support.py  project_intelligence.py  prometheus_metrics.py  quality_compaction.py  queue_manager.py  reproducibility.py  resilience.py  runtime_settings.py  s3_storage.py  scheduler_service.py  semantic_skills.py  sentry_integration.py  session_branching.py  skill_library.py  (+10 more)
backend/services/vision/: __init__.py  advanced_systems.py  agent_pool.py  brain_communication.py  code_graph.py  distributed_queue.py  dream_mode.py  execution_replay.py  integrations.py  intent_engine.py  self_improving_prompts.py
backend/tests/: __init__.py  conftest.py  test_agent_factory.py  test_command_classifier.py  test_message_bus.py  test_playbook_parser.py  test_security.py  test_services.py  test_tool_parser.py  test_tool_registry.py  test_tools.py
backend/tools/: __init__.py  batch_tools.py  browser_tools.py  code_tools.py  dynamic_tools.py  file_tools.py  gui_tools.py  llm_client.py  registry.py  repl_tools.py  scratchpad_tools.py  search_tools.py  shell_tools.py
docs/api/: openapi.yaml
docs/decisions/: 0001-pure-httpx-for-llm-calls.md  0002-pure-httpx-for-chromadb.md  README.md  (+8 more)
examples/: build-dino-game.json  build-todo-app.json  organize-photos.json  research-report.json  web-scraper.json
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
scripts/: backup.sh  export_openapi.py  seed_data.py  validate_docker.sh
sdks/python/: README.md  pyproject.toml
sdks/python/milyfe_brain/: __init__.py  client.py  models.py
src/: index.js
terraform/: README.md  main.tf  modules.tf  outputs.tf  variables.tf
(+129 files in other folders)
