[project]
name = "milyfe-brain"
version = "1.0.0"
description = "Local-only AI agent swarm orchestration platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "graphs", "memory", "models", "tools", "safety", "prompts", "hooks", "mcp", "services", "plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
