[project]
name = "milyfe-brain-backend"
version = "2.0.0"
description = "MiLyfe Brain AI Agent Swarm Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "ICN", "PIE", "T20", "RET", "SLF", "SIM"]
ignore = ["S101", "S104", "S603", "S607", "S608", "COM812"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]
"alembic/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
timeout = 30

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "alembic/*", "services/vision/*", "__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
fail_under = 50
