[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milyfe-brain"
version = "2.0.0"
description = "Python SDK for the MiLyfe Brain AI Agent Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MiLyfe Team"},
]
keywords = ["ai", "agents", "llm", "orchestration", "milyfe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/RealMiLyfe/MiLyfe-Brain"
Documentation = "https://github.com/RealMiLyfe/MiLyfe-Brain/tree/main/sdks/python"
Repository = "https://github.com/RealMiLyfe/MiLyfe-Brain"

[tool.hatch.build.targets.wheel]
packages = ["milyfe_brain"]
